--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="resume/ashraf-atef.pdf" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/file/d/0B7LCgztxEI7rRnhBcUQ3ZWo0VVU/view?usp=sharing" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
