--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>AAM</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -490,8 +490,6 @@
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
-
    		</div>   		
    	</div> <!-- /section-intro--> 
 
@@ -504,13 +502,13 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="images/H2O/H2O-Logo.png" alt="Liberty">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">H2O App</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Desctop Application
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -520,13 +518,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
+	               	<img src="images/Glass World/Logo.jpg" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">Glass World</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Android application
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -536,13 +534,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/Graduate Studies/Logo.jpg"alt="Clouds">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Post Graduate Studies</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Web Appliction
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -552,13 +550,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
+	               	<img src="images/Faculty Table/Logo.png" alt="Faculty Table Construction">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Faculty Table Construction</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Desktop Application
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
@@ -566,15 +564,31 @@
 	               </div>
 	        		</div> <!-- /folio-item -->     
 
+                   <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/Online Exam/Logo.png" alt="Online Exam">
+	                  <a href="#modal-06" class="overlay">
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Online Exam</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Desktop Application
+		     					      </span>		     		
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+
+	        		</div> <!-- /folio-item -->   
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
+	               	<img src="images/Compiler/Logo.jpg" alt="Compiler">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Compiler</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  Desktop Application
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -584,13 +598,47 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/salad.jpg" alt="Salad">
+	               	<img src="images/Section Manager/Logo.jpg" alt="Section Manager">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">Section Manager</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Desktop Application
+		     					      </span>		     		
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->   
+
+	        		 
+
+	        		 <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/Downloader/Logo.jpg" alt="Downloader">
+	                  <a href="#modal-06" class="overlay">
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Dowmloader</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Desktop Application
+		     					      </span>		     		
+		     					   </div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>
+	        		</div> <!-- /folio-item -->   
+
+	        		 <div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/Remote Caller/Logo.jpg" alt="Remote Caller">
+	                  <a href="#modal-06" class="overlay">
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+	                     		<h3 class="folio-title">Remote Caller</h3>	     					    
+		     					    	<span class="folio-types">
+		     					       	  Desktop Application
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
